--- a/News/app/src/main/res/values/strings.xml
+++ b/News/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">News</string>
     <string name="preference_key">preference</string>
+    <string name="enter_the_query_here">Enter the query here</string>
+    <string name="search">Search</string>
 </resources>
